--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ body {
 }
 
 .side-bar .user-account {
-    height: 4rem;
+    height: 5rem;
     background-color: var(--gray);
 
     display: flex;
@@ -108,7 +108,7 @@ body {
 /* notifications */
 
 .notification {
-    height: 5rem;
+    height: 7rem;
     background-color: var(--celeste-notification);
 
     display: flex;
@@ -117,13 +117,12 @@ body {
 }
 
 .icon-notif {
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 
     border-radius: 50%;
-    padding: 1rem;
+    padding: 1.5rem;
     margin: 0 0.5rem;
 
     background-color: var(--white);
@@ -135,4 +134,25 @@ body {
 
 .active-notif {
     color: #568093;
+}
+
+/* search friend bar */
+
+.search-friend {
+    display: flex;
+    padding: 0.8rem;
+}
+
+.search-friend .icon-search {
+    padding: 0.5rem 1rem;
+    border: 1px solid var(--gray);
+}
+
+.search-friend .input-search {
+    width: 100%;
+    border: 1px solid var(--gray);
+    border-left: none;
+    padding: 0.3rem;
+    font-size: 1.2em;
+
 }
