--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ body {
     border: 1px solid black;
 
     width: 1400px;
+    height: calc(100vh - 4rem);
     /* height: 90vh; */
     display: flex;
 }
@@ -66,6 +67,7 @@ body {
     width: 40%;
     height: 100%;
     border: 1px solid black;
+    overflow: hidden;
 }
 
 .content-bar {
@@ -76,14 +78,15 @@ body {
 
 /* side-bar */
 
-/* user account */
 
 .side-bar>* {
     width: 100%;
 }
 
-.side-bar .user-account {
-    height: 5rem;
+/* user account */
+
+.user-account {
+    height: 4rem;
     background-color: var(--gray);
 
     display: flex;
@@ -108,7 +111,7 @@ body {
 /* notifications */
 
 .notification {
-    height: 7rem;
+    height: 6rem;
     background-color: var(--celeste-notification);
 
     display: flex;
@@ -154,5 +157,50 @@ body {
     border-left: none;
     padding: 0.3rem;
     font-size: 1.2em;
+}
 
+/* friend bar */
+
+.friend-bar {
+    height: 74%;
+    padding-bottom: 0.2rem;
+    overflow-y: scroll;
+}
+
+.friend {
+    height: 5rem;
+    display: flex;
+
+    padding: 1rem 0.2rem;
+    margin: 0 0.5rem;
+
+    background-color: var(--white);
+}
+
+.friend-details {
+    position: relative;
+    width: 100%;
+
+    padding-left: 0.5rem;
+}
+
+.friend img {
+    height: 100%;
+    border-radius: 50%;
+}
+
+.friend-name {
+    font-size: 1.3em;
+    padding-bottom: 0.3rem;
+}
+
+.friend .last-message {
+    color: var(--gray-text);
+}
+
+.friend .time-message {
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: var(--gray-text);
 }
