--- a/css/style.css
+++ b/css/style.css
@@ -59,20 +59,24 @@ body {
 
     /* border: 1px solid black; */
 
-    min-width: 1400px;
+    width: 80vw;
     height: calc(100vh - 4rem);
     display: flex;
 }
 
 .side-bar {
-    width: 40%;
+    width: 35%;
+    min-width: 460px;
+
     height: 100%;
     /* border: 1px solid black; */
     overflow: hidden;
 }
 
 .content-bar {
-    width: 60%;
+    width: 65%;
+    min-width: 850px;
+
     height: 100%;
     /* border: 1px solid black; */
 
@@ -178,11 +182,13 @@ body {
     display: flex;
 
     padding: 1rem 0.5rem;
-    /* margin: 0 0.5rem; */
-
-    background-color: var(--white);
-
     border-top: 1px solid var(--gray);
+}
+
+/* vue class */
+
+.back-color {
+    background-color: rgb(221, 220, 220);
 }
 
 .friend-bar .friend-details {
@@ -267,7 +273,7 @@ body {
 }
 
 .content-message .row-message {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -278,7 +284,7 @@ body {
     background-color: var(--green-message);
 
     border-radius: 10px;
-    width: 20rem;
+    width: 17rem;
     margin-bottom: 10px;
 
     margin-left: auto;
@@ -290,7 +296,7 @@ body {
     background-color: white;
 
     border-radius: 10px;
-    width: 20rem;
+    width: 17rem;
     margin-bottom: 10px;
 }
 
