--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,6 @@ body {
 }
 
 .content-message .row-message {
-    /* border: 1px solid black; */
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -292,7 +291,6 @@ body {
 
 
 .content-message .cont-message {
-    border: 1px solid black;
     display: block;
     position: relative;
     border-radius: 10px;
@@ -325,10 +323,7 @@ body {
     background-color: white;
 }
 
-
-
 .content-message .hidden-list {
-    border: 1px solid black;
     padding: 1rem;
     position: absolute;
     top: 95%;
@@ -336,8 +331,12 @@ body {
     background-color: white;
     display: none;
     z-index: 99999;
-}
 
+    -webkit-box-shadow: 0px 1px 10px 0px #000000;
+    -moz-box-shadow: 0px 1px 10px 0px #000000;
+    -o-box-shadow: 0px 1px 10px 0px #000000;
+    box-shadow: 0px 1px 10px 0px #000000;
+}
 
 /* vue classes */
 
@@ -382,6 +381,10 @@ body {
 .text-inner-message .fa-solid,
 .text-inner-message .fa-regular {
     margin: 0 1.5rem;
+}
+
+.text-inner-message .fa-paper-plane {
+    font-size: 1.1rem;
 }
 
 .content-bar .text-message {
