add delete chat and friend

--- a/css/style.css
+++ b/css/style.css
@@ -266,11 +266,41 @@ body {
 
 .content-bar .icons-selected-user {
     margin-left: auto;
+    position: relative;
 }
 
 .content-bar .icons-selected-user .fa-solid {
     margin: 0 0.5rem;
 }
+
+.icons-selected-user .hidden-list {
+    text-align: end;
+    width: 15rem;
+    padding: 1rem;
+    position: absolute;
+    top: 95%;
+    right: 0;
+
+    background-color: white;
+    /* display: none */
+    z-index: 99999;
+
+    -webkit-box-shadow: 0px 1px 10px 0px #000000;
+    -moz-box-shadow: 0px 1px 10px 0px #000000;
+    -o-box-shadow: 0px 1px 10px 0px #000000;
+    box-shadow: 0px 1px 10px 0px #000000;
+}
+
+.icons-selected-user .hidden-list li {
+    list-style: none;
+    cursor: pointer;
+    margin-bottom: 0.5rem;
+}
+
+.icons-selected-user .hidden-list li:hover {
+    color: gray;
+}
+
 
 /* content message */
 
